[FEAT] IM key empty toast

--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -170,3 +170,4 @@
 "Removed Stage" = "You were removed from stage";
 "Mic Closed" = "Mic closed by host";
 "Members reach limit!" = "Members reach limit!";
+"voice_im_key_empty_error" = "Invalid Parameter, Please check ’IMAppKey’ / ‘IMClientId’ / ‘IMClientSecret’ in KeyCenter.swift";
