[Android]adapter to rtc sdk 4.1.1.4 version

--- a/Android/app/src/main/res/values-zh/strings.xml
+++ b/Android/app/src/main/res/values-zh/strings.xml
@@ -49,6 +49,7 @@
     <string name="app_about_chat_room">语聊房</string>
     <string name="app_about_chat_room_spatial">语聊房-空间音频模式</string>
     <string name="app_about_karaoke">在线K歌</string>
+    <string name="app_about_show">秀场直播</string>
     <string name="app_about_customer_service">联系客服</string>
     <string name="app_about_official_website">官网地址</string>
     <string name="app_about_phone_cancel">取消</string>
