--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="app_about_chat_room">Chat Room</string>
     <string name="app_about_chat_room_spatial">Chat Room SA Mode</string>
     <string name="app_about_karaoke">Karaoke</string>
+    <string name="app_about_show">Show</string>
     <string name="app_about_customer_service">Customer Service</string>
     <string name="app_about_official_website">Official Website</string>
     <string name="app_about_phone_cancel">Cancel</string>
