--- a/Android/scenes/voice_spatial/src/main/res/values/strings.xml
+++ b/Android/scenes/voice_spatial/src/main/res/values/strings.xml
@@ -234,4 +234,6 @@
     <string name="voice_chatroom_permission_setting">Setting</string>
     <string name="voice_chatroom_permission_leak_title">no microphone permission</string>
     <string name="voice_chatroom_permission_leak_content">Please turn on the microphone permission in the settings</string>
+    <string name="voice_room_online">%1$s online</string>
+    <string name="voice_room_views">%1$s views</string>
 </resources>
