添加举报多语言

--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -191,3 +191,5 @@
 "This room has been dissolved by the host" = "This room has been dissolved by the host";
 "you were offline!" = "you were offline!";
 "illegal check" = "No content that violates relevant laws, regulations and policies, please edit again";
+"Report" = "Report";
+"Report success" = "Report success";
