--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -240,3 +240,5 @@
 "you were offline!" = "您已离线";
 "illegal check" = "不能有违反相关法律法规和政策的内容，请重新编辑";
 "Contribution empty" = "暂无贡献者";
+"Report" = "举报";
+"Report success" = "举报成功";
