--- a/Android/common/ui-widget/src/main/res/values/strings.xml
+++ b/Android/common/ui-widget/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="confirm_to_exit_room">确认退出该房间吗？</string>
     <string name="exit_room">退出房间</string>
     <string name="dismiss_room">解散房间</string>
+    <string name="report_room">Report</string>
 
     <string name="cancel">取消</string>
     <string name="close">关闭</string>
