更新举报成功英文文案

--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -192,4 +192,4 @@
 "you were offline!" = "you were offline!";
 "illegal check" = "No content that violates relevant laws, regulations and policies, please edit again";
 "Report" = "Report";
-"Report success" = "Report success";
+"Report success" = "Reported";
