--- a/Android/scenes/ktv/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values-zh/strings.xml
@@ -113,6 +113,9 @@
     <string name="ktv_voice_effect">音效</string>
     <string name="ktv_camera">摄像头</string>
     <string name="ktv_leave_chorus">退出合唱</string>
+    <string name="ktv_voice_highlight">人声突出</string>
+    <string name="ktv_voice_profile">配置</string>
+    <string name="ktv_voice_professional">专业主播</string>
 
     <!--    Content Description-->
     <string name="ktv_toggle_mic">麦克风启用或静音</string>
