添加多语言

--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -242,3 +242,19 @@
 "Contribution empty" = "暂无贡献者";
 "Report" = "举报";
 "Report success" = "举报成功";
+"自动" = "自动";
+"强制OpenSL" = "强制OpenSL";
+"强制Oboe" = "强制Oboe";
+"开启耳返可实时听到自己的声音, 唱歌的时候及时调整" = "开启耳返可实时听到自己的声音, 唱歌的时候及时调整";
+"使用耳返必须插入耳机，当前未检测到耳机" = "使用耳返必须插入耳机，当前未检测到耳机";
+"耳返" = "耳返";
+"开启耳返" = "开启耳返";
+"耳返设置" = "耳返设置";
+"耳返音量" = "耳返音量";
+"提示" = "提示";
+"切换后将强制使用%@模式,确认?" = "切换后将强制使用%@模式,确认?";
+"实时耳返延时" = "实时耳返延时";
+"请对着耳麦说话，测试实时耳返延时" = "请对着耳麦说话，测试实时耳返延时";
+"背景音乐" = "背景音乐";
+"In-Ear Monitor" = "耳返";
+"Background Music" = "背景音乐";
