--- a/Android/scenes/ktv/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values/strings.xml
@@ -63,8 +63,8 @@
     <string name="ktv_music_menu_dialog_ear">耳返</string>
     <string name="ktv_music_menu_dialog_tone">升降调</string>
     <string name="ktv_music_menu_dialog_remote_volume">远端音量</string>
-    <string name="ktv_music_menu_dialog_vol1">音量</string>
-    <string name="ktv_music_menu_dialog_vol2">伴奏</string>
+    <string name="ktv_music_menu_dialog_vol1">人声音量</string>
+    <string name="ktv_music_menu_dialog_vol2">伴奏音量</string>
     <string name="ktv_music_menu_dialog_effect">效果</string>
     <string name="ktv_song_rank_1">热歌榜</string>
     <string name="ktv_song_rank_2">嗨唱推荐</string>
